public/scss/models/_rex-slider.scss
.rex-slider-wrap, .rex-box-slider-wrap {
  .flickity-page-dots {
    bottom: 0px;
    .dot {
      width: 3%;
      max-width: 50px;
      height: 2px;
      padding: 10px 0;
      margin: 0 5px;
      border-radius: 0;
      opacity: 1;
      background: transparent;
      position: relative;
      &:after {
        background: rgba(255,255,255,0.4);
        width: 100%;
        height: 2px;
        position: absolute;
        content: '';
        top: 9px;
        left: 0;
      }
      &.is-selected {
        &:after {
          background: white;
        }
      }
    }
  }

  .flickity-prev-next-button {
    box-shadow: none;
    text-shadow: none;
    position: absolute;
    //transform: translateY(-50%) rotate(-90deg);
    svg {
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
    }
    &.previous {
      /* svg {
        transform: rotate(90deg);
        top: 5px;
        left: -15px;
      } */
    }
    &.next {
      /* svg {
        top: -5px;
        left: 15px;
        transform: rotate(90deg);
      } */
    }
  }

  &.is-dragging {
    .rex-slider-element, .rex-box-slider-element {
      pointer-events: none;
    }
  }

  .flickity-prev-next-button, .flickity-prev-next-button:hover {
    background: transparent;
    .arrow {
      fill: white;
    }
  }
}

.rex-slider-wrap {
  width: 100%;
  height: 100%;

  .rex-slider-element {
    width: 100%;
		height: 100%;

		@include backgroundCover();

    &:after {
      // @include soft-shadow();
      content: '';
      position: absolute;
      width: 100%;
      height: 100%;
      bottom: 0;
      max-height: 105px;
      height: 100%;
      left: 0;
      @include linear-gradient(to bottom, rgba(34, 34, 34, 0) 0%, rgba(34, 34, 34, 0.6) 190%);
    }

    .youtube-player {
      height: 100%;

      @media screen and (max-width: $small) {
        background-image: none!important;
      }
    }

    .rex-video-vimeo-wrap.rex-video-vimeo-wrap--block {
      z-index: 1;
    }

    .rex-video-toggle-audio {
      z-index: 10;
    }
  }

  .rex-slider-element-link {
    display: block;
    height: 100%;
    position: relative;
    z-index: 10;
  }

  .rex-slider-element-title {
    position: relative;
    top: 50%;
    transform: translate(0,-50%);
    display: block;
    padding: 0 60px;
    z-index: 10;
    a {
      font-size: inherit;
      font-family: inherit;
      color: inherit;
      text-decoration: none;
      font-weight: inherit;
      &:hover {
        text-decoration: none;
        color: inherit;
      }
    }
  }
}

.natural-slide__wrap {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.blur-slide {
  position: absolute;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.natural-slide {
  display: block;
  position:relative;
  z-index: 1;
  width: auto;
  height: auto;
  max-width: 100%;
  max-height: 100%;
  // margin: 0 auto;
}

.rex-box-slider-wrap {
  height: 485px;
  // margin: 20px auto;
  .rex-box-slider-element {
    width: 250px;
    height: 400px;
    background-color: $white;
    margin: 10px;
    // box-shadow: 0px 1px 14px 0px rgba(0, 0, 0, 0.25);
  }

  .news-block {
    // height: 400px;
    .news-block-media {
      height: 50%;
    }
    .grid-item-content {
      height: 50%;
    }
  }
  .flickity-page-dots {
    bottom: 21px;
    .dot {
      width: 2%;
      &:after {
        background: rgba(0,0,0,0.2);
      }
      &.is-selected {
        &:after {
          background: #333;
        }
      }
    }
  }

  @media screen and (max-width: $small) {
    height: 400px;
    .rex-box-slider-element {
      width: 200px;
      height: 350px;
    }
    .flickity-prev-next-button {
      display: none;
    }
    .flickity-page-dots {
      bottom: 4px;
      .dot {
        width: 4%;
      }
    }
  }

  @media screen and (min-width: 768px) {
    margin: 0 80px;
    .flickity-prev-next-button {
      width: 38px;
      height: 38px;
      top: calc(50% - 32px);
      &.previous {
        left: -45px;
        svg {
          top: 5px;
          left: -13px;
        }
      }
      &.next {
        right: -45px;
        svg {
          top: -5px;
          left: 13px;
        }
      }
      .arrow {
        fill: #333;
      }
      &:hover {
        .arrow {
          fill: #333;
        }
      }
    }
  }
}

@media screen and (max-width:$small) {
  .full-height-section {
    .perfect-grid-item {
      &.block-has-slider {
        .rex-slider-wrap {
          min-height: 100vh;
          .flickity-viewport {
            min-height: 100vh;
          }
        }
      }
    }
  }
}

.block-has-slider {
  p {
    margin: 0!important;
  }
  .rex-custom-scrollbar, .text-wrap {
    height: 100%;
  }
}

.full-height-section {
  .block-has-slider {
    .mCSB_container {
      height: inherit;
    }
  }
}

// Custom Navigation: Bottom right numbers
.rex-slider-navigator--bottom-right-numbers {
  padding: 0 60px;
  .rex-slider__br-nums-wrap {
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: 10;
    padding: 10px;
  }
}

// Custom Navigation: Bottom image + label
.rex-slider__b-label-image-wrap {
  border-top:1px solid #aaa;
  z-index:2000;
  bottom:0;
  position:absolute;
  bottom:0;
  left:0;
  right:0;
  width:auto;
  height: auto;

  .rex-slider__b-label-image-nav {
    justify-content: stretch;
    display: flex;

    .flickity-viewport {
      width: 100%;
    }

    &.flickity-page-dots.rex-slider__custom-nav {
      position: static;
    }

    li {
      width:20%;
      text-align: center;

      // &:not(:last-child) {
        // border-right:1px solid #aaa;
      // }
    }
  }
  .rex-slider__b-label-image--item {
    cursor: pointer;
    padding:10px;
    color:white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    a {
      display: block;
      width: 100%;
    }
    .rex-slider__b-label-image__link-content {
      display: flex;
      align-items: center;
      flex-direction: column;
      max-height: 100%;
    }
  }
}

/*.rex-slider__preview-slides-container {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  display: none;
  &.anchor-active {
    display: block;
  }
}*/

.rex-slider__preview-slide-wrap {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: auto;
  height: auto;
  z-index: 1500;
  visibility: hidden;
  opacity: 0;
  transition: opacity 300ms, visibility 300ms;
  // transition: opacity 300ms;

  &.preview-active {
    visibility: visible;
    opacity: 1;
  }

  .rex-slider-element--dummy {
    width: 100%;
    height: 100%;
    @include backgroundCover();
  }
}

